--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
@@ -23,6 +23,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         '--offset-top': offsetTop,
     }"
     x-ref="preview"
+    :inert="!isActive"
 >
     <div
         class="transition-preview__wrapper"
