--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-suggestions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-suggestions.phtml
@@ -10,12 +10,13 @@
         </div>
         <div class="flex min-h-11 flex-col gap-2 md:min-h-[48px]">
             <div class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width] max-md:pb-3">
-                <template x-for="suggestion in suggestions">
+                <template x-for="(suggestion, index) in suggestions">
                     <a
                         :href="'/catalogsearch/result/?q=' + suggestion.search"
                         class="button button--outline-secondary"
                         x-element-transition-trigger
                         x-text="suggestion.search"
+                        x-a11y-trap-target.end="getIsSearchActive() && !products.length && !categories.length && suggestions.length && index === suggestions.length - 1"
                     ></a>
                 </template>
             </div>
