--- a/src/satoshi-ui/view/adminhtml/web/template/content-type/satoshi-video-hero/default/preview.html
+++ b/src/satoshi-ui/view/adminhtml/web/template/content-type/satoshi-video-hero/default/preview.html
@@ -10,7 +10,7 @@
         ko-style="data.overlay_opacity.style"
     ></div>
     <div>
-        <video class="video-banner__video" attr="data.video.attributes" playsinline if="data.video.attributes()?.src?.endsWith('.mp4')">
+        <video class="video-banner__video" attr="data.video.attributes" playsinline if="data.video.attributes()?.src?.endsWith('.mp4')" muted>
             <source attr="data.video.attributes" type="video/mp4">
         </video>
         <iframe
@@ -18,6 +18,7 @@
             allowfullscreen
             attr="data.video.attributes"
             class="video-banner__video"
+            muted="true"
             ifnot="data.video.attributes()?.src?.endsWith('.mp4')"
         ></iframe>
         <svg
