Refactor transition to use hyva.replaceDomElement

--- a/src/satoshi-theme/Magento_Theme/templates/html/layout/transition/preview-content.phtml
+++ b/src/satoshi-theme/Magento_Theme/templates/html/layout/transition/preview-content.phtml
@@ -8,5 +8,7 @@ use Magento\Framework\View\Element\Template;
 ?>
 
 <!-- preview-content -->
-<?= $block->getChildHtml() ?>
+<div id="PreviewContent" class="contents">
+    <?= $block->getChildHtml() ?>
+</div>
 <!-- end-preview-content -->
