Hide video thumbnail when first frame is available

--- a/src/satoshi-ui/view/frontend/templates/satoshi_ui/video-hero.phtml
+++ b/src/satoshi-ui/view/frontend/templates/satoshi_ui/video-hero.phtml
@@ -60,7 +60,7 @@ $mobileAlignment = $block->getData('mobile_content_alignment');
             <?= $loop ? 'loop' : '' ?>
             playsinline
             preload="none"
-            @loadstart="loaded = true"
+            @loadeddata="loaded = true"
         >
             <source src="<?= $escaper->escapeUrl($videoUrl) ?>" type="video/mp4">
         </video>
